--- a/validation/results/validate_d22.Rmd
+++ b/validation/results/validate_d22.Rmd
@@ -50,7 +50,7 @@ model.params.list <- list(
   , R2.1 = rep(0.1, M)                    # percent of indiv variation explained by indiv covariates
 )
 
-design <- "d2.2_m2rc"
+d_m <- "d2.2_m2rc"
 params.default <- model.params.list
 ```
 
@@ -73,7 +73,7 @@ Assumptions
 ## Base case
 
 ```{r 2r_nj50}
-d2.2_m2rc_nj50_power_plot <- gen.power.results.plot(gen_params_file_base(model.params.list, sim.params.list, design), design)
+d2.2_m2rc_nj50_power_plot <- gen.power.results.plot(gen_params_file_base(model.params.list, sim.params.list, d_m), d_m)
 print(d2.2_m2rc_nj50_power_plot)
 ```
 
@@ -86,8 +86,8 @@ model.params.list[['nbar']] <- 100
 $\bar{n}$ = `r model.params.list[['nbar']]`
 
 ```{r 2r_nj100}
-params.file.base <- gen_params_file_base(model.params.list, sim.params.list, design)
-d2.2_m2rc_nj100_power_plot <- gen.power.results.plot(params.file.base, design)
+params.file.base <- gen_params_file_base(model.params.list, sim.params.list, d_m)
+d2.2_m2rc_nj100_power_plot <- gen.power.results.plot(params.file.base, d_m)
 print(d2.2_m2rc_nj100_power_plot)
 ```
 
@@ -98,7 +98,7 @@ model.params.list[['nbar']] <- 75
 $\bar{n}$ = `r model.params.list[['nbar']]`
 
 ```{r 2r_nj75}
-d2.2_m2rc_nj75_power_plot <- gen.power.results.plot(gen_params_file_base(model.params.list, sim.params.list, design), design)
+d2.2_m2rc_nj75_power_plot <- gen.power.results.plot(gen_params_file_base(model.params.list, sim.params.list, d_m), d_m)
 print(d2.2_m2rc_nj75_power_plot)
 ```
 
@@ -115,7 +115,7 @@ model.params.list[['R2.1']] <- rep(0.6, M)
 $R^2_1 =$ `r model.params.list[['R2.1']]`
 
 ```{r 2r_r2106}
-d2.2_m2rc_r2.1_power_plot <- gen.power.results.plot(gen_params_file_base(model.params.list, sim.params.list, design), design)
+d2.2_m2rc_r2.1_power_plot <- gen.power.results.plot(gen_params_file_base(model.params.list, sim.params.list, d_m), d_m)
 print(d2.2_m2rc_r2.1_power_plot)
 model.params.list[['R2.1']] <- params.default[['R2.1']]  
 ```
@@ -127,7 +127,7 @@ model.params.list[['R2.2']] <- rep(0.6, M)
 $R^2_2 =$ `r model.params.list[['R2.2']]`
 
 ```{r 2r_r2206}
-d2.2_m2rc_r2.2_power_plot <- gen.power.results.plot(gen_params_file_base(model.params.list, sim.params.list, design), design)
+d2.2_m2rc_r2.2_power_plot <- gen.power.results.plot(gen_params_file_base(model.params.list, sim.params.list, d_m), d_m)
 print(d2.2_m2rc_r2.2_power_plot)
 model.params.list[['R2.2']] <- params.default[['R2.2']]  
 ```
@@ -141,7 +141,7 @@ $R^2_1 =$ `r model.params.list[['R2.1']]`
 $R^2_2 =$ `r model.params.list[['R2.2']]`
 
 ```{r 2r_r210r220}
-d2.2_m2rc_r2.2_power_plot <- gen.power.results.plot(gen_params_file_base(model.params.list, sim.params.list, design), design)
+d2.2_m2rc_r2.2_power_plot <- gen.power.results.plot(gen_params_file_base(model.params.list, sim.params.list, d_m), d_m)
 print(d2.2_m2rc_r2.2_power_plot)
 model.params.list[['R2.1']] <- params.default[['R2.1']]  
 model.params.list[['R2.2']] <- params.default[['R2.2']]  
@@ -161,7 +161,7 @@ model.params.list[['rho.u']] <- model.params.list[['rho.v']] <- model.params.lis
 $\rho =$ `r model.params.list[['rho.default']]`
 
 ```{r 2r_rho02}
-d2.2_m2rc_rho0.2_power_plot <- gen.power.results.plot(gen_params_file_base(model.params.list, sim.params.list, design), design)
+d2.2_m2rc_rho0.2_power_plot <- gen.power.results.plot(gen_params_file_base(model.params.list, sim.params.list, d_m), d_m)
 print(d2.2_m2rc_rho0.2_power_plot)
 ```
 
@@ -176,7 +176,7 @@ model.params.list[['rho.u']] <- model.params.list[['rho.v']] <- model.params.lis
 $\rho =$ `r model.params.list[['rho.default']]`
 
 ```{r 2r_rho08}
-d2.2_m2rc_rho0.8_power_plot <- gen.power.results.plot(gen_params_file_base(model.params.list, sim.params.list, design), design)
+d2.2_m2rc_rho0.8_power_plot <- gen.power.results.plot(gen_params_file_base(model.params.list, sim.params.list, d_m), d_m)
 print(d2.2_m2rc_rho0.8_power_plot)
 # reset
 rho.default <- params.default[['rho.default']]
@@ -196,7 +196,7 @@ MDES = `r model.params.list[['MDES']]`
 
 
 ```{r 2r_MDES012500}
-d2.2_m2rc_mdes0.1250.00.0.00_power_plot <- gen.power.results.plot(gen_params_file_base(model.params.list, sim.params.list, design), design)
+d2.2_m2rc_mdes0.1250.00.0.00_power_plot <- gen.power.results.plot(gen_params_file_base(model.params.list, sim.params.list, d_m), d_m)
 print(d2.2_m2rc_mdes0.1250.00.0.00_power_plot)
 model.params.list[['MDES']] <- params.default[['MDES']]
 ```
@@ -210,7 +210,7 @@ model.params.list[['ICC.2']] <- rep(0.7, M)
 $\text{ICC}_2$ = `r model.params.list[['ICC.2']]`
 
 ```{r 2r_ICC207}
-d2.2_m2rc_ICC2.0.7_power_plot <- gen.power.results.plot(gen_params_file_base(model.params.list, sim.params.list, design), design)
+d2.2_m2rc_ICC2.0.7_power_plot <- gen.power.results.plot(gen_params_file_base(model.params.list, sim.params.list, d_m), d_m)
 print(d2.2_m2rc_ICC2.0.7_power_plot)
 model.params.list[['ICC.2']] <- params.default[['ICC.2']]
 ```
@@ -223,7 +223,7 @@ model.params.list[['ICC.2']] <- rep(0, M)
 $\text{ICC}_2$ = `r model.params.list[['ICC.2']]`
 
 ```{r 2r_ICC20}
-d2.2_m2rc_ICC2.0_power_plot <- gen.power.results.plot(gen_params_file_base(model.params.list, sim.params.list, design), design)
+d2.2_m2rc_ICC2.0_power_plot <- gen.power.results.plot(gen_params_file_base(model.params.list, sim.params.list, d_m), d_m)
 print(d2.2_m2rc_ICC2.0_power_plot)
 model.params.list[['ICC.2']] <- params.default[['ICC.2']]
 ```
@@ -239,9 +239,9 @@ model.params.list[['kappa.w']] <- model.params.list[['kappa.u']] <- kappa.matrix
 $\kappa$ = `r kappa`
 
 ```{r 2r_kappa04}
-design <- "d2.2_m2rc"
+d_m <- "d2.2_m2rc"
 d2.2_m2rc_kappa0.4_power_plot <-
-  gen.power.results.plot(gen_params_file_base(model.params.list, sim.params.list, design), design)
+  gen.power.results.plot(gen_params_file_base(model.params.list, sim.params.list, d_m), d_m)
 print(d2.2_m2rc_kappa0.4_power_plot)
 ```
 
@@ -257,7 +257,7 @@ model.params.list <- params.default
 ```
 
 ```{r 2r_mdes}
-params.file.base <- gen_params_file_base(model.params.list, sim.params.list, design)
+params.file.base <- gen_params_file_base(model.params.list, sim.params.list, d_m)
 mdes.file <- find_file(params.file.base, type = 'mdes_D1indiv')
 if(length(mdes.file) == 0)
 {
@@ -268,7 +268,7 @@ if(length(mdes.file) == 0)
   pander::pandoc.table(
     d2.2_m2rc_mdes_results,
     style = "grid", split.tables = 100, row.names = FALSE, 
-    caption = design
+    caption = d_m
   )
 }
 ```
@@ -276,8 +276,8 @@ if(length(mdes.file) == 0)
 # Sample size validation
 
 ```{r 2r_sampleD1_J}
-design <- "d2.2_m2rc"
-params.file.base <- gen_params_file_base(model.params.list, sim.params.list, design)
+d_m <- "d2.2_m2rc"
+params.file.base <- gen_params_file_base(model.params.list, sim.params.list, d_m)
 sample.file <- find_file(params.file.base, type = 'sample_J_D1indiv')
 if(length(sample.file) == 0)
 {
@@ -288,14 +288,14 @@ if(length(sample.file) == 0)
   pander::pandoc.table(
     d2.2_m2rc_sample_D1_J_results,
     style = "grid", split.tables = 100, row.names = FALSE,
-    caption = design
+    caption = d_m
   )
 }
 ```
 
 ```{r 2r_sampleD1_nbar}
-design <- "d2.2_m2rc"
-params.file.base <- gen_params_file_base(model.params.list, sim.params.list, design)
+d_m <- "d2.2_m2rc"
+params.file.base <- gen_params_file_base(model.params.list, sim.params.list, d_m)
 sample.file <- find_file(params.file.base, type = 'sample_nbar_D1indiv')
 if(length(sample.file) == 0)
 {
@@ -306,7 +306,7 @@ if(length(sample.file) == 0)
   pander::pandoc.table(
     d2.2_m2rc_sample_D1_nbar_results,
     style = "grid", split.tables = 100, row.names = FALSE,
-    caption = design
+    caption = d_m
   )
 }
 ```
