--- a/validation/results/validate_d33.Rmd
+++ b/validation/results/validate_d33.Rmd
@@ -55,7 +55,7 @@ model.params.list <- list(
   , R2.1 = rep(0.1, M)                    # percent of indiv variation explained by indiv covariates
 )
 
-design <- "d3.3_m3rc2rc"
+d_m <- "d3.3_m3rc2rc"
 params.default <- model.params.list
 ```
 
@@ -75,7 +75,7 @@ Default parameters:
 ## Base case
 
 ```{r 3r_nj50}
-d3.3_m3rc2rc_nj50_power_plot <- gen.power.results.plot(gen_params_file_base(model.params.list, sim.params.list, design), design)
+d3.3_m3rc2rc_nj50_power_plot <- gen.power.results.plot(gen_params_file_base(model.params.list, sim.params.list, d_m), d_m)
 print(d3.3_m3rc2rc_nj50_power_plot)
 ```
 
@@ -88,8 +88,8 @@ model.params.list[['nbar']] <- 100
 $\bar{n}$ = `r model.params.list[['nbar']]`
 
 ```{r 3r_nj100}
-params.file.base <- gen_params_file_base(model.params.list, sim.params.list, design)
-d3.3_m3rc2rc_nj100_power_plot <- gen.power.results.plot(params.file.base, design)
+params.file.base <- gen_params_file_base(model.params.list, sim.params.list, d_m)
+d3.3_m3rc2rc_nj100_power_plot <- gen.power.results.plot(params.file.base, d_m)
 print(d3.3_m3rc2rc_nj100_power_plot)
 ```
 
@@ -100,7 +100,7 @@ model.params.list[['nbar']] <- 75
 $\bar{n}$ = `r model.params.list[['nbar']]`
 
 ```{r 3r_nj75}
-d3.3_m3rc2rc_nj75_power_plot <- gen.power.results.plot(gen_params_file_base(model.params.list, sim.params.list, design), design)
+d3.3_m3rc2rc_nj75_power_plot <- gen.power.results.plot(gen_params_file_base(model.params.list, sim.params.list, d_m), d_m)
 print(d3.3_m3rc2rc_nj75_power_plot)
 ```
 
@@ -117,7 +117,7 @@ model.params.list[['R2.1']] <- rep(0.6, M)
 $R^2_1 =$ `r model.params.list[['R2.1']]`
 
 ```{r 3r_r2106}
-d3.3_m3rc2rc_r2.1_power_plot <- gen.power.results.plot(gen_params_file_base(model.params.list, sim.params.list, design), design)
+d3.3_m3rc2rc_r2.1_power_plot <- gen.power.results.plot(gen_params_file_base(model.params.list, sim.params.list, d_m), d_m)
 print(d3.3_m3rc2rc_r2.1_power_plot)
 model.params.list[['R2.1']] <- params.default[['R2.1']]  
 ```
@@ -129,7 +129,7 @@ model.params.list[['R2.2']] <- rep(0.6, M)
 $R^2_2 =$ `r model.params.list[['R2.2']]`
 
 ```{r 3r_r2206}
-d3.3_m3rc2rc_r2.2_power_plot <- gen.power.results.plot(gen_params_file_base(model.params.list, sim.params.list, design), design)
+d3.3_m3rc2rc_r2.2_power_plot <- gen.power.results.plot(gen_params_file_base(model.params.list, sim.params.list, d_m), d_m)
 print(d3.3_m3rc2rc_r2.2_power_plot)
 model.params.list[['R2.2']] <- params.default[['R2.2']]  
 ```
@@ -141,7 +141,7 @@ model.params.list[['R2.3']] <- rep(0.6, M)
 $R^2_3 =$ `r model.params.list[['R2.3']]`
 
 ```{r 3r_r2306}
-d3.3_m3rc2rc_r2.3_power_plot <- gen.power.results.plot(gen_params_file_base(model.params.list, sim.params.list, design), design)
+d3.3_m3rc2rc_r2.3_power_plot <- gen.power.results.plot(gen_params_file_base(model.params.list, sim.params.list, d_m), d_m)
 print(d3.3_m3rc2rc_r2.3_power_plot)
 model.params.list[['R2.3']] <- params.default[['R2.3']]  
 ```
@@ -157,7 +157,7 @@ $R^2_2 =$ `r model.params.list[['R2.2']]`
 $R^2_3 =$ `r model.params.list[['R2.3']]`
 
 ```{r 3r_r210r220r230}
-d3.3_m3rc2rc_r2.3_power_plot <- gen.power.results.plot(gen_params_file_base(model.params.list, sim.params.list, design), design)
+d3.3_m3rc2rc_r2.3_power_plot <- gen.power.results.plot(gen_params_file_base(model.params.list, sim.params.list, d_m), d_m)
 print(d3.3_m3rc2rc_r2.3_power_plot)
 model.params.list[['R2.1']] <- params.default[['R2.1']]  
 model.params.list[['R2.2']] <- params.default[['R2.2']]  
@@ -178,7 +178,7 @@ model.params.list[['rho.u']] <- model.params.list[['rho.v']] <- model.params.lis
 $\rho =$ `r model.params.list[['rho.default']]`
 
 ```{r 3r_rho02}
-d3.3_m3rc2rc_rho0.2_power_plot <- gen.power.results.plot(gen_params_file_base(model.params.list, sim.params.list, design), design)
+d3.3_m3rc2rc_rho0.2_power_plot <- gen.power.results.plot(gen_params_file_base(model.params.list, sim.params.list, d_m), d_m)
 print(d3.3_m3rc2rc_rho0.2_power_plot)
 ```
 
@@ -193,7 +193,7 @@ model.params.list[['rho.u']] <- model.params.list[['rho.v']] <- model.params.lis
 $\rho =$ `r model.params.list[['rho.default']]`
 
 ```{r 3r_rho08}
-d3.3_m3rc2rc_rho0.8_power_plot <- gen.power.results.plot(gen_params_file_base(model.params.list, sim.params.list, design), design)
+d3.3_m3rc2rc_rho0.8_power_plot <- gen.power.results.plot(gen_params_file_base(model.params.list, sim.params.list, d_m), d_m)
 print(d3.3_m3rc2rc_rho0.8_power_plot)
 # reset
 rho.default <- params.default[['rho.default']]
@@ -213,7 +213,7 @@ model.params.list[['MDES']] <- c(0.25, 0, 0)
 MDES = `r model.params.list[['MDES']]`
 
 ```{r 3r_MDES012500}
-d3.3_m3rc2rc_mdes0.1250.00.0.00_power_plot <- gen.power.results.plot(gen_params_file_base(model.params.list, sim.params.list, design), design)
+d3.3_m3rc2rc_mdes0.1250.00.0.00_power_plot <- gen.power.results.plot(gen_params_file_base(model.params.list, sim.params.list, d_m), d_m)
 print(d3.3_m3rc2rc_mdes0.1250.00.0.00_power_plot)
 model.params.list[['MDES']] <- rep(0.25, M)
 ```
@@ -227,7 +227,7 @@ model.params.list[['ICC.2']] <- rep(0.7, M)
 $\text{ICC}_2$ = `r model.params.list[['ICC.2']]`
 
 ```{r 3r_ICC207}
-d3.3_m3rc2rc_ICC2.0.7_power_plot <- gen.power.results.plot(gen_params_file_base(model.params.list, sim.params.list, design), design)
+d3.3_m3rc2rc_ICC2.0.7_power_plot <- gen.power.results.plot(gen_params_file_base(model.params.list, sim.params.list, d_m), d_m)
 print(d3.3_m3rc2rc_ICC2.0.7_power_plot)
 model.params.list[['ICC.2']] <- params.default[['ICC.2']]
 ```
@@ -239,7 +239,7 @@ model.params.list[['ICC.3']] <- rep(0.7, M)
 $\text{ICC}_3$ = `r model.params.list[['ICC.3']]`
 
 ```{r 3r_ICC307}
-d3.3_m3rc2rc_ICC3.0.7_power_plot <- gen.power.results.plot(gen_params_file_base(model.params.list, sim.params.list, design), design)
+d3.3_m3rc2rc_ICC3.0.7_power_plot <- gen.power.results.plot(gen_params_file_base(model.params.list, sim.params.list, d_m), d_m)
 print(d3.3_m3rc2rc_ICC3.0.7_power_plot)
 model.params.list[['ICC.3']] <- params.default[['ICC.3']]
 ```
@@ -252,7 +252,7 @@ model.params.list[['ICC.2']] <- rep(0, M)
 $\text{ICC}_2$ = `r model.params.list[['ICC.2']]`
 
 ```{r 3r_ICC20}
-d3.3_m3rc2rc_ICC2.0_power_plot <- gen.power.results.plot(gen_params_file_base(model.params.list, sim.params.list, design), design)
+d3.3_m3rc2rc_ICC2.0_power_plot <- gen.power.results.plot(gen_params_file_base(model.params.list, sim.params.list, d_m), d_m)
 print(d3.3_m3rc2rc_ICC2.0_power_plot)
 model.params.list[['ICC.2']] <- params.default[['ICC.2']]
 ```
@@ -264,7 +264,7 @@ model.params.list[['ICC.3']] <- rep(0, M)
 $\text{ICC}_3$ = `r model.params.list[['ICC.3']]`
 
 ```{r 3r_ICC30}
-d3.3_m3rc2rc_ICC3.0_power_plot <- gen.power.results.plot(gen_params_file_base(model.params.list, sim.params.list, design), design)
+d3.3_m3rc2rc_ICC3.0_power_plot <- gen.power.results.plot(gen_params_file_base(model.params.list, sim.params.list, d_m), d_m)
 print(d3.3_m3rc2rc_ICC3.0_power_plot)
 model.params.list[['ICC.3']] <- params.default[['ICC.3']]
 ```
@@ -280,9 +280,9 @@ model.params.list[['kappa.w']] <- model.params.list[['kappa.u']] <- kappa.matrix
 $\kappa$ = `r kappa`
 
 ```{r 3r_kappa04}
-design <- "d3.3_m3rc2rc"
+d_m <- "d3.3_m3rc2rc"
 d3.3_m3rc2rc_kappa0.4_power_plot <-
-  gen.power.results.plot(gen_params_file_base(model.params.list, sim.params.list, design), design)
+  gen.power.results.plot(gen_params_file_base(model.params.list, sim.params.list, d_m), d_m)
 print(d3.3_m3rc2rc_kappa0.4_power_plot)
 ```
 
@@ -298,7 +298,7 @@ model.params.list <- params.default
 ```
 
 ```{r 3r_mdes}
-params.file.base <- gen_params_file_base(model.params.list, sim.params.list, design)
+params.file.base <- gen_params_file_base(model.params.list, sim.params.list, d_m)
 mdes.file <- find_file(params.file.base, type = 'mdes_D1indiv')
 if(length(mdes.file) == 0)
 {
@@ -309,7 +309,7 @@ if(length(mdes.file) == 0)
   pander::pandoc.table(
     d3.3_m3rc2rc_mdes_results,
     style = "grid", split.tables = 100, row.names = FALSE, 
-    caption = design
+    caption = d_m
   )
 }
 ```
@@ -317,8 +317,8 @@ if(length(mdes.file) == 0)
 # Sample size validation
 
 ```{r 3r_sampleD1_J}
-design <- "d3.3_m3rc2rc"
-params.file.base <- gen_params_file_base(model.params.list, sim.params.list, design)
+d_m <- "d3.3_m3rc2rc"
+params.file.base <- gen_params_file_base(model.params.list, sim.params.list, d_m)
 sample.file <- find_file(params.file.base, type = 'sample_J_D1indiv')
 if(length(sample.file) == 0)
 {
@@ -329,14 +329,14 @@ if(length(sample.file) == 0)
   pander::pandoc.table(
     d3.3_m3rc2rc_sample_D1_J_results,
     style = "grid", split.tables = 100, row.names = FALSE,
-    caption = design
+    caption = d_m
   )
 }
 ```
 
 ```{r 3r_sampleD1_K}
-design <- "d3.3_m3rc2rc"
-params.file.base <- gen_params_file_base(model.params.list, sim.params.list, design)
+d_m <- "d3.3_m3rc2rc"
+params.file.base <- gen_params_file_base(model.params.list, sim.params.list, d_m)
 sample.file <- find_file(params.file.base, type = 'sample_K_D1indiv')
 if(length(sample.file) == 0)
 {
@@ -347,14 +347,14 @@ if(length(sample.file) == 0)
   pander::pandoc.table(
     d3.3_m3rc2rc_sample_D1_K_results,
     style = "grid", split.tables = 100, row.names = FALSE,
-    caption = design
+    caption = d_m
   )
 }
 ```
 
 ```{r 3r_sampleD1_nbar}
-design <- "d3.3_m3rc2rc"
-params.file.base <- gen_params_file_base(model.params.list, sim.params.list, design)
+d_m <- "d3.3_m3rc2rc"
+params.file.base <- gen_params_file_base(model.params.list, sim.params.list, d_m)
 sample.file <- find_file(params.file.base, type = 'sample_nbar_D1indiv')
 if(length(sample.file) == 0)
 {
@@ -365,7 +365,7 @@ if(length(sample.file) == 0)
   pander::pandoc.table(
     d3.3_m3rc2rc_sample_D1_nbar_results,
     style = "grid", split.tables = 100, row.names = FALSE,
-    caption = design
+    caption = d_m
   )
 }
 ```
