--- a/validation/results/validate_powerdef.Rmd
+++ b/validation/results/validate_powerdef.Rmd
@@ -53,13 +53,13 @@ model.params.list <- list(
   , R2.1 = rep(0.1, M)                    # percent of indiv variation explained by indiv covariates
 )
 params.default <- model.params.list
-design <- "d3.2_m3ff2rc"
+d_m <- "d3.2_m3ff2rc"
 ```
 
 # Power Validation
 
 ```{r raw_D1indiv}
-design <- "d3.2_m3ff2rc"
+d_m <- "d3.2_m3ff2rc"
 model.params.list$MDES <- rep(0.1, 3)
 model.params.list$J <- 3
 model.params.list$K <- 22
@@ -70,12 +70,12 @@ model.params.list$R2.3 <- NULL
 model.params.list$ICC.2 <- rep(0.05, M)
 model.params.list$ICC.3 <- rep(0.4, M)
 model.params.list$rho <- 0.4
-d3.2_m3ff2rc_rawD1indiv_power_plot <- gen.power.results.plot(gen_params_file_base(model.params.list, sim.params.list, design), design)
+d3.2_m3ff2rc_rawD1indiv_power_plot <- gen.power.results.plot(gen_params_file_base(model.params.list, sim.params.list, d_m), d_m)
 print(d3.2_m3ff2rc_rawD1indiv_power_plot)
 ```
 
 ```{r bonf_D1indiv}
-design <- "d3.2_m3ff2rc"
+d_m <- "d3.2_m3ff2rc"
 model.params.list$MDES <- rep(0.1, 3)
 model.params.list$J <- 4
 model.params.list$K <- 17
@@ -86,12 +86,12 @@ model.params.list$R2.3 <- NULL
 model.params.list$ICC.2 <- rep(0.05, M)
 model.params.list$ICC.3 <- rep(0.4, M)
 model.params.list$rho <- 0.4
-d3.2_m3ff2rc_bonfD1indiv_power_plot <- gen.power.results.plot(gen_params_file_base(model.params.list, sim.params.list, design), design)
+d3.2_m3ff2rc_bonfD1indiv_power_plot <- gen.power.results.plot(gen_params_file_base(model.params.list, sim.params.list, d_m), d_m)
 print(d3.2_m3ff2rc_bonfD1indiv_power_plot)
 ```
 
 ```{r bonf_min1}
-design <- "d3.2_m3ff2rc"
+d_m <- "d3.2_m3ff2rc"
 model.params.list$MDES <- rep(0.1, 3)
 model.params.list$J <- 4
 model.params.list$K <- 16
@@ -102,12 +102,12 @@ model.params.list$R2.3 <- NULL
 model.params.list$ICC.2 <- rep(0.05, M)
 model.params.list$ICC.3 <- rep(0.4, M)
 model.params.list$rho <- 0.4
-d3.2_m3ff2rc_bonfmin1_power_plot <- gen.power.results.plot(gen_params_file_base(model.params.list, sim.params.list, design), design)
+d3.2_m3ff2rc_bonfmin1_power_plot <- gen.power.results.plot(gen_params_file_base(model.params.list, sim.params.list, d_m), d_m)
 print(d3.2_m3ff2rc_bonfmin1_power_plot)
 ```
 
 ```{r bonf_complete}
-design <- "d3.2_m3ff2rc"
+d_m <- "d3.2_m3ff2rc"
 model.params.list$MDES <- rep(0.1, 3)
 model.params.list$J <- 4
 model.params.list$K <- 16
@@ -118,7 +118,7 @@ model.params.list$R2.3 <- NULL
 model.params.list$ICC.2 <- rep(0.05, M)
 model.params.list$ICC.3 <- rep(0.4, M)
 model.params.list$rho <- 0.4
-d3.2_m3ff2rc_bonfcomplete_power_plot <- gen.power.results.plot(gen_params_file_base(model.params.list, sim.params.list, design), design)
+d3.2_m3ff2rc_bonfcomplete_power_plot <- gen.power.results.plot(gen_params_file_base(model.params.list, sim.params.list, d_m), d_m)
 print(d3.2_m3ff2rc_bonfcomplete_power_plot)
 ```
 
@@ -140,8 +140,8 @@ model.params.list[['ICC.2']] <- rep(0.1, M)
 ```
 
 ```{r mdes_D1indiv}
-design <- "d3.3_m3rc2rc"
-params.file.base <- gen_params_file_base(model.params.list, sim.params.list, design)
+d_m <- "d3.3_m3rc2rc"
+params.file.base <- gen_params_file_base(model.params.list, sim.params.list, d_m)
 sample.file <- find_file(params.file.base, type = 'mdes_D1indiv')
 if(length(sample.file) == 0)
 {
@@ -152,14 +152,14 @@ if(length(sample.file) == 0)
   pander::pandoc.table(
     d3.3_m3rc2rc_mdes_D1_results,
     style = "grid", split.tables = 100, row.names = FALSE,
-    caption = design
+    caption = d_m
   )
 }
 ```
 
 ```{r mdes_min1}
-design <- "d3.3_m3rc2rc"
-params.file.base <- gen_params_file_base(model.params.list, sim.params.list, design)
+d_m <- "d3.3_m3rc2rc"
+params.file.base <- gen_params_file_base(model.params.list, sim.params.list, d_m)
 sample.file <- find_file(params.file.base, type = 'mdes_min1')
 if(length(sample.file) == 0)
 {
@@ -170,14 +170,14 @@ if(length(sample.file) == 0)
   pander::pandoc.table(
     d3.3_m3rc2rc_mdes_min1_results,
     style = "grid", split.tables = 100, row.names = FALSE,
-    caption = design
+    caption = d_m
   )
 }
 ```
 
 ```{r mdes_min2}
-design <- "d3.3_m3rc2rc"
-params.file.base <- gen_params_file_base(model.params.list, sim.params.list, design)
+d_m <- "d3.3_m3rc2rc"
+params.file.base <- gen_params_file_base(model.params.list, sim.params.list, d_m)
 sample.file <- find_file(params.file.base, type = 'mdes_min2')
 if(length(sample.file) == 0)
 {
@@ -188,14 +188,14 @@ if(length(sample.file) == 0)
   pander::pandoc.table(
     d3.3_m3rc2rc_mdes_min2_results,
     style = "grid", split.tables = 100, row.names = FALSE,
-    caption = design
+    caption = d_m
   )
 }
 ```
 
 ```{r mdes_complete}
-design <- "d3.3_m3rc2rc"
-params.file.base <- gen_params_file_base(model.params.list, sim.params.list, design)
+d_m <- "d3.3_m3rc2rc"
+params.file.base <- gen_params_file_base(model.params.list, sim.params.list, d_m)
 sample.file <- find_file(params.file.base, type = 'mdes_complete')
 if(length(sample.file) == 0)
 {
@@ -206,7 +206,7 @@ if(length(sample.file) == 0)
   pander::pandoc.table(
     d3.3_m3rc2rc_mdes_complete_results,
     style = "grid", split.tables = 100, row.names = FALSE,
-    caption = design
+    caption = d_m
   )
 }
 ```
@@ -216,8 +216,8 @@ if(length(sample.file) == 0)
 ## Sample Size J
 
 ```{r ss_D1indiv_J}
-design <- "d3.3_m3rc2rc"
-params.file.base <- gen_params_file_base(model.params.list, sim.params.list, design)
+d_m <- "d3.3_m3rc2rc"
+params.file.base <- gen_params_file_base(model.params.list, sim.params.list, d_m)
 sample.file <- find_file(params.file.base, type = 'sample_J_D1indiv')
 if(length(sample.file) == 0)
 {
@@ -228,14 +228,14 @@ if(length(sample.file) == 0)
   pander::pandoc.table(
     d3.3_m3rc2rc_sample_J_D1_results,
     style = "grid", split.tables = 100, row.names = FALSE,
-    caption = design
+    caption = d_m
   )
 }
 ```
 
 ```{r ss_min1_J}
-design <- "d3.3_m3rc2rc"
-params.file.base <- gen_params_file_base(model.params.list, sim.params.list, design)
+d_m <- "d3.3_m3rc2rc"
+params.file.base <- gen_params_file_base(model.params.list, sim.params.list, d_m)
 sample.file <- find_file(params.file.base, type = 'sample_J_min1')
 if(length(sample.file) == 0)
 {
@@ -246,14 +246,14 @@ if(length(sample.file) == 0)
   pander::pandoc.table(
     d3.3_m3rc2rc_sample_J_min1_results,
     style = "grid", split.tables = 100, row.names = FALSE,
-    caption = design
+    caption = d_m
   )
 }
 ```
 
 ```{r ss_min2_J}
-design <- "d3.3_m3rc2rc"
-params.file.base <- gen_params_file_base(model.params.list, sim.params.list, design)
+d_m <- "d3.3_m3rc2rc"
+params.file.base <- gen_params_file_base(model.params.list, sim.params.list, d_m)
 sample.file <- find_file(params.file.base, type = 'sample_J_min2')
 if(length(sample.file) == 0)
 {
@@ -264,14 +264,14 @@ if(length(sample.file) == 0)
   pander::pandoc.table(
     d3.3_m3rc2rc_sample_J_min2_results,
     style = "grid", split.tables = 100, row.names = FALSE,
-    caption = design
+    caption = d_m
   )
 }
 ```
 
 ```{r ss_complete_J}
-design <- "d3.3_m3rc2rc"
-params.file.base <- gen_params_file_base(model.params.list, sim.params.list, design)
+d_m <- "d3.3_m3rc2rc"
+params.file.base <- gen_params_file_base(model.params.list, sim.params.list, d_m)
 sample.file <- find_file(params.file.base, type = 'sample_J_complete')
 if(length(sample.file) == 0)
 {
@@ -282,7 +282,7 @@ if(length(sample.file) == 0)
   pander::pandoc.table(
     d3.3_m3rc2rc_sample_J_complete_results,
     style = "grid", split.tables = 100, row.names = FALSE,
-    caption = design
+    caption = d_m
   )
 }
 ```
@@ -290,8 +290,8 @@ if(length(sample.file) == 0)
 ## Sample Size K
 
 ```{r ss_D1indiv_K}
-design <- "d3.3_m3rc2rc"
-params.file.base <- gen_params_file_base(model.params.list, sim.params.list, design)
+d_m <- "d3.3_m3rc2rc"
+params.file.base <- gen_params_file_base(model.params.list, sim.params.list, d_m)
 sample.file <- find_file(params.file.base, type = 'sample_K_D1indiv')
 if(length(sample.file) == 0)
 {
@@ -302,14 +302,14 @@ if(length(sample.file) == 0)
   pander::pandoc.table(
     d3.3_m3rc2rc_sample_K_D1_results,
     style = "grid", split.tables = 100, row.names = FALSE,
-    caption = design
+    caption = d_m
   )
 }
 ```
 
 ```{r ss_min1_K}
-design <- "d3.3_m3rc2rc"
-params.file.base <- gen_params_file_base(model.params.list, sim.params.list, design)
+d_m <- "d3.3_m3rc2rc"
+params.file.base <- gen_params_file_base(model.params.list, sim.params.list, d_m)
 sample.file <- find_file(params.file.base, type = 'sample_K_min1')
 if(length(sample.file) == 0)
 {
@@ -320,14 +320,14 @@ if(length(sample.file) == 0)
   pander::pandoc.table(
     d3.3_m3rc2rc_sample_K_min1_results,
     style = "grid", split.tables = 100, row.names = FALSE,
-    caption = design
+    caption = d_m
   )
 }
 ```
 
 ```{r ss_min2_K}
-design <- "d3.3_m3rc2rc"
-params.file.base <- gen_params_file_base(model.params.list, sim.params.list, design)
+d_m <- "d3.3_m3rc2rc"
+params.file.base <- gen_params_file_base(model.params.list, sim.params.list, d_m)
 sample.file <- find_file(params.file.base, type = 'sample_K_min2')
 if(length(sample.file) == 0)
 {
@@ -338,14 +338,14 @@ if(length(sample.file) == 0)
   pander::pandoc.table(
     d3.3_m3rc2rc_sample_K_min2_results,
     style = "grid", split.tables = 100, row.names = FALSE,
-    caption = design
+    caption = d_m
   )
 }
 ```
 
 ```{r ss_complete_K}
-design <- "d3.3_m3rc2rc"
-params.file.base <- gen_params_file_base(model.params.list, sim.params.list, design)
+d_m <- "d3.3_m3rc2rc"
+params.file.base <- gen_params_file_base(model.params.list, sim.params.list, d_m)
 sample.file <- find_file(params.file.base, type = 'sample_K_complete')
 if(length(sample.file) == 0)
 {
@@ -356,7 +356,7 @@ if(length(sample.file) == 0)
   pander::pandoc.table(
     d3.3_m3rc2rc_sample_K_complete_results,
     style = "grid", split.tables = 100, row.names = FALSE,
-    caption = design
+    caption = d_m
   )
 }
 ```
@@ -364,8 +364,8 @@ if(length(sample.file) == 0)
 ## Sample Size nbar
 
 ```{r ss_D1indiv_nbar}
-design <- "d3.3_m3rc2rc"
-params.file.base <- gen_params_file_base(model.params.list, sim.params.list, design)
+d_m <- "d3.3_m3rc2rc"
+params.file.base <- gen_params_file_base(model.params.list, sim.params.list, d_m)
 sample.file <- find_file(params.file.base, type = 'sample_nbar_D1indiv')
 if(length(sample.file) == 0)
 {
@@ -376,14 +376,14 @@ if(length(sample.file) == 0)
   pander::pandoc.table(
     d3.3_m3rc2rc_sample_nbar_D1_results,
     style = "grid", split.tables = 100, row.names = FALSE,
-    caption = design
+    caption = d_m
   )
 }
 ```
 
 ```{r ss_min1_nbar}
-design <- "d3.3_m3rc2rc"
-params.file.base <- gen_params_file_base(model.params.list, sim.params.list, design)
+d_m <- "d3.3_m3rc2rc"
+params.file.base <- gen_params_file_base(model.params.list, sim.params.list, d_m)
 sample.file <- find_file(params.file.base, type = 'sample_nbar_min1')
 if(length(sample.file) == 0)
 {
@@ -394,14 +394,14 @@ if(length(sample.file) == 0)
   pander::pandoc.table(
     d3.3_m3rc2rc_sample_nbar_min1_results,
     style = "grid", split.tables = 100, row.names = FALSE,
-    caption = design
+    caption = d_m
   )
 }
 ```
 
 ```{r ss_min2_nbar}
-design <- "d3.3_m3rc2rc"
-params.file.base <- gen_params_file_base(model.params.list, sim.params.list, design)
+d_m <- "d3.3_m3rc2rc"
+params.file.base <- gen_params_file_base(model.params.list, sim.params.list, d_m)
 sample.file <- find_file(params.file.base, type = 'sample_nbar_min2')
 if(length(sample.file) == 0)
 {
@@ -412,14 +412,14 @@ if(length(sample.file) == 0)
   pander::pandoc.table(
     d3.3_m3rc2rc_sample_nbar_min2_results,
     style = "grid", split.tables = 100, row.names = FALSE,
-    caption = design
+    caption = d_m
   )
 }
 ```
 
 ```{r ss_complete_nbar}
-design <- "d3.3_m3rc2rc"
-params.file.base <- gen_params_file_base(model.params.list, sim.params.list, design)
+d_m <- "d3.3_m3rc2rc"
+params.file.base <- gen_params_file_base(model.params.list, sim.params.list, d_m)
 sample.file <- find_file(params.file.base, type = 'sample_nbar_complete')
 if(length(sample.file) == 0)
 {
@@ -430,7 +430,7 @@ if(length(sample.file) == 0)
   pander::pandoc.table(
     d3.3_m3rc2rc_sample_nbar_complete_results,
     style = "grid", split.tables = 100, row.names = FALSE,
-    caption = design
+    caption = d_m
   )
 }
 ```
@@ -445,8 +445,8 @@ model.params.list[['rho']] <- 0
 ```
 
 ```{r mdes_min1_rho0}
-design <- "d3.3_m3rc2rc"
-params.file.base <- gen_params_file_base(model.params.list, sim.params.list, design)
+d_m <- "d3.3_m3rc2rc"
+params.file.base <- gen_params_file_base(model.params.list, sim.params.list, d_m)
 sample.file <- find_file(params.file.base, type = 'mdes_min1')
 if(length(sample.file) == 0)
 {
@@ -457,14 +457,14 @@ if(length(sample.file) == 0)
   pander::pandoc.table(
     d3.3_m3rc2rc_mdes_min1_results,
     style = "grid", split.tables = 100, row.names = FALSE,
-    caption = design
+    caption = d_m
   )
 }
 ```
 
 ```{r mdes_complete_rho0}
-design <- "d3.3_m3rc2rc"
-params.file.base <- gen_params_file_base(model.params.list, sim.params.list, design)
+d_m <- "d3.3_m3rc2rc"
+params.file.base <- gen_params_file_base(model.params.list, sim.params.list, d_m)
 sample.file <- find_file(params.file.base, type = 'mdes_complete')
 if(length(sample.file) == 0)
 {
@@ -475,15 +475,15 @@ if(length(sample.file) == 0)
   pander::pandoc.table(
     d3.3_m3rc2rc_mdes_complete_results,
     style = "grid", split.tables = 100, row.names = FALSE,
-    caption = design
+    caption = d_m
   )
 }
 ```
 
 
 ```{r ss_min1_J_rho0}
-design <- "d3.3_m3rc2rc"
-params.file.base <- gen_params_file_base(model.params.list, sim.params.list, design)
+d_m <- "d3.3_m3rc2rc"
+params.file.base <- gen_params_file_base(model.params.list, sim.params.list, d_m)
 sample.file <- find_file(params.file.base, type = 'sample_J_min1')
 if(length(sample.file) == 0)
 {
@@ -494,15 +494,15 @@ if(length(sample.file) == 0)
   pander::pandoc.table(
     d3.3_m3rc2rc_sample_J_min1_results,
     style = "grid", split.tables = 100, row.names = FALSE,
-    caption = design
+    caption = d_m
   )
 }
 ```
 
 
 ```{r ss_complete_J_rho0}
-design <- "d3.3_m3rc2rc"
-params.file.base <- gen_params_file_base(model.params.list, sim.params.list, design)
+d_m <- "d3.3_m3rc2rc"
+params.file.base <- gen_params_file_base(model.params.list, sim.params.list, d_m)
 sample.file <- find_file(params.file.base, type = 'sample_J_min2')
 if(length(sample.file) == 0)
 {
@@ -513,7 +513,7 @@ if(length(sample.file) == 0)
   pander::pandoc.table(
     d3.3_m3rc2rc_sample_J_complete_results,
     style = "grid", split.tables = 100, row.names = FALSE,
-    caption = design
+    caption = d_m
   )
 }
 ```
@@ -525,8 +525,8 @@ model.params.list[['rho']] <- 0.8
 ```
 
 ```{r mdes_min1_rho08}
-design <- "d3.3_m3rc2rc"
-params.file.base <- gen_params_file_base(model.params.list, sim.params.list, design)
+d_m <- "d3.3_m3rc2rc"
+params.file.base <- gen_params_file_base(model.params.list, sim.params.list, d_m)
 sample.file <- find_file(params.file.base, type = 'mdes_min1')
 if(length(sample.file) == 0)
 {
@@ -537,14 +537,14 @@ if(length(sample.file) == 0)
   pander::pandoc.table(
     d3.3_m3rc2rc_mdes_min1_results,
     style = "grid", split.tables = 100, row.names = FALSE,
-    caption = design
+    caption = d_m
   )
 }
 ```
 
 ```{r mdes_complete_rho08}
-design <- "d3.3_m3rc2rc"
-params.file.base <- gen_params_file_base(model.params.list, sim.params.list, design)
+d_m <- "d3.3_m3rc2rc"
+params.file.base <- gen_params_file_base(model.params.list, sim.params.list, d_m)
 sample.file <- find_file(params.file.base, type = 'mdes_complete')
 if(length(sample.file) == 0)
 {
@@ -555,15 +555,15 @@ if(length(sample.file) == 0)
   pander::pandoc.table(
     d3.3_m3rc2rc_mdes_complete_results,
     style = "grid", split.tables = 100, row.names = FALSE,
-    caption = design
+    caption = d_m
   )
 }
 ```
 
 
 ```{r ss_min1_J_rho08}
-design <- "d3.3_m3rc2rc"
-params.file.base <- gen_params_file_base(model.params.list, sim.params.list, design)
+d_m <- "d3.3_m3rc2rc"
+params.file.base <- gen_params_file_base(model.params.list, sim.params.list, d_m)
 sample.file <- find_file(params.file.base, type = 'sample_J_min1')
 if(length(sample.file) == 0)
 {
@@ -574,15 +574,15 @@ if(length(sample.file) == 0)
   pander::pandoc.table(
     d3.3_m3rc2rc_sample_J_min1_results,
     style = "grid", split.tables = 100, row.names = FALSE,
-    caption = design
+    caption = d_m
   )
 }
 ```
 
 
 ```{r ss_complete_J_rho08}
-design <- "d3.3_m3rc2rc"
-params.file.base <- gen_params_file_base(model.params.list, sim.params.list, design)
+d_m <- "d3.3_m3rc2rc"
+params.file.base <- gen_params_file_base(model.params.list, sim.params.list, d_m)
 sample.file <- find_file(params.file.base, type = 'sample_J_min2')
 if(length(sample.file) == 0)
 {
@@ -593,7 +593,7 @@ if(length(sample.file) == 0)
   pander::pandoc.table(
     d3.3_m3rc2rc_sample_J_complete_results,
     style = "grid", split.tables = 100, row.names = FALSE,
-    caption = design
+    caption = d_m
   )
 }
 ```
@@ -606,8 +606,8 @@ model.params.list[['rho']] <- 1
 ```
 
 ```{r mdes_min1_rho1}
-design <- "d3.3_m3rc2rc"
-params.file.base <- gen_params_file_base(model.params.list, sim.params.list, design)
+d_m <- "d3.3_m3rc2rc"
+params.file.base <- gen_params_file_base(model.params.list, sim.params.list, d_m)
 sample.file <- find_file(params.file.base, type = 'mdes_min1')
 if(length(sample.file) == 0)
 {
@@ -618,14 +618,14 @@ if(length(sample.file) == 0)
   pander::pandoc.table(
     d3.3_m3rc2rc_mdes_min1_results,
     style = "grid", split.tables = 100, row.names = FALSE,
-    caption = design
+    caption = d_m
   )
 }
 ```
 
 ```{r mdes_complete_rho1}
-design <- "d3.3_m3rc2rc"
-params.file.base <- gen_params_file_base(model.params.list, sim.params.list, design)
+d_m <- "d3.3_m3rc2rc"
+params.file.base <- gen_params_file_base(model.params.list, sim.params.list, d_m)
 sample.file <- find_file(params.file.base, type = 'mdes_complete')
 if(length(sample.file) == 0)
 {
@@ -636,15 +636,15 @@ if(length(sample.file) == 0)
   pander::pandoc.table(
     d3.3_m3rc2rc_mdes_complete_results,
     style = "grid", split.tables = 100, row.names = FALSE,
-    caption = design
+    caption = d_m
   )
 }
 ```
 
 
 ```{r ss_min1_J_rho1}
-design <- "d3.3_m3rc2rc"
-params.file.base <- gen_params_file_base(model.params.list, sim.params.list, design)
+d_m <- "d3.3_m3rc2rc"
+params.file.base <- gen_params_file_base(model.params.list, sim.params.list, d_m)
 sample.file <- find_file(params.file.base, type = 'sample_J_min1')
 if(length(sample.file) == 0)
 {
@@ -655,15 +655,15 @@ if(length(sample.file) == 0)
   pander::pandoc.table(
     d3.3_m3rc2rc_sample_J_min1_results,
     style = "grid", split.tables = 100, row.names = FALSE,
-    caption = design
+    caption = d_m
   )
 }
 ```
 
 
 ```{r ss_complete_J_rho1}
-design <- "d3.3_m3rc2rc"
-params.file.base <- gen_params_file_base(model.params.list, sim.params.list, design)
+d_m <- "d3.3_m3rc2rc"
+params.file.base <- gen_params_file_base(model.params.list, sim.params.list, d_m)
 sample.file <- find_file(params.file.base, type = 'sample_J_min2')
 if(length(sample.file) == 0)
 {
@@ -674,7 +674,7 @@ if(length(sample.file) == 0)
   pander::pandoc.table(
     d3.3_m3rc2rc_sample_J_complete_results,
     style = "grid", split.tables = 100, row.names = FALSE,
-    caption = design
+    caption = d_m
   )
 }
 ```
